app/assets/stylesheets/favourites.scss
// Place all the styles related to the Favourites controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
h2{
  text-align: center;
}

ul{
  text-align: center;
  display: grid;
  position: relative;
}
div{
  width: 100%;
  margin: auto;
}

